# Blink-Mouse-Control

./: .gitignore  LICENSE  README.md  presentation_notes.txt  pyproject.toml  requirements.txt  run.bat  run.ps1
src/: blink_mouse_control.py  main.py  utils.py
src/blink_mouse_control/: __init__.py  __main__.py  actions.py  calibration.py  cli.py  config.py  detector.py  ear.py  model.py  overlay.py  preprocessing.py  settings.py  ui.py
